--- a/examples/example_linearity.ipynb
+++ b/examples/example_linearity.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "from OptiHPLCHandler import EmpowerHandler\n",
     "\n",
-    "handler = EmpowerHandler(project=\"WebAPI_test\", address=\"http://epdkhqr01018.corp.novocorp.net:3076\")"
+    "handler = EmpowerHandler(project=\"WebAPI_test\", address=\"XXXXXX)"
    ]
   },
   {
